--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@ When run normally, it does not load and run the Clojure code.
 
 Clojure code is enabled only when the ~dev~ profile is activated
 
+*Note*: There is no reason it _should_ be so. If you are adventurous enough (or believe in Clojure), get rid of the ~@Profile("dev")~ annotation in the ~DevWorx~ class.
+
 #+begin_src bash
 SPRING_PROFILES_ACTIVE=dev ./gradlew clean bootRun
 
