Some refinements, and added examples.
Also, gradle script changes to address certain warnings about
unpredictable build order

--- a/README.org
+++ b/README.org
@@ -41,7 +41,8 @@ Output looks something like
   (:require [org.msync.spring-boost :as boost]
             [compojure.core :refer :all]
             [compojure.route :refer [not-found]]
-            [clojure.string])
+            [clojure.string]
+            [clojure.pprint :refer [pprint]])
   (:import [java.util.logging Logger]
            [org.springframework.context ApplicationContext]))
 
@@ -66,10 +67,10 @@ Output looks something like
   (not-found "<h1>Page not found</h1>"))
 
 (defn web-socket-handler [session]
-  (pr-str session)
+  (pprint session)
   ;; Use the session as you wish - to create session-specific handlers
   (fn [^String message]
-    (str "Hello, " (.toUpperCase message))))
+    (str "*Hello*, " (.toUpperCase message))))
 
 (defn main
   "Set this as your entry-point for the Clojure code in your spring-boot app.
@@ -79,4 +80,12 @@ Output looks something like
   (.info logger (str "[spring-clj] Initializing clojure app..."))
   (boost/set-handler! app)
   (boost/set-websocket-handler! web-socket-handler))
+
+(comment
+  (require '[org.msync.spring-boost.application-context :as ac])
+  (ac/get-application-context)
+  (ac/beans-with-annotation org.springframework.stereotype.Component)
+  (->> (ac/beans-with-annotation org.springframework.stereotype.Component)
+       vals
+       (map class)))
 #+end_src
